fix: euro sign alignment
The alignment for the euro sign item was of -> it was slightly below the
text.
Override the position manually just for the euro sign. This may break on
very large fonts

--- a/app/resources/css/typography.css
+++ b/app/resources/css/typography.css
@@ -69,6 +69,12 @@ i {
     i {
         font-size: .8em;
     }
+
+    .icon-euro {
+        position: relative;
+        top: -0.07em;
+        color: inherit;
+    }
 }
 
 .font-size--sm {
